# inara

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
docs/: architecture.md  navigation.md  schema-model.md
proptest-regressions/schema/: parse.txt
src/: config.rs  lib.rs  llm.rs  main.rs
src/migration/: loader.rs  mod.rs  overlay.rs  pattern.rs  warnings.rs
src/migration/snapshots/: inara__migration__tests__snapshot_add_column.snap  inara__migration__tests__snapshot_add_constraint_check.snap  inara__migration__tests__snapshot_add_constraint_fk.snap  inara__migration__tests__snapshot_add_constraint_pk.snap  inara__migration__tests__snapshot_add_constraint_unique.snap  inara__migration__tests__snapshot_add_index.snap  inara__migration__tests__snapshot_add_partial_index.snap  inara__migration__tests__snapshot_add_unique_index.snap  inara__migration__tests__snapshot_alter_column_bundled.snap  inara__migration__tests__snapshot_alter_column_drop_default.snap  inara__migration__tests__snapshot_alter_column_drop_not_null.snap  inara__migration__tests__snapshot_alter_column_rename.snap  inara__migration__tests__snapshot_alter_column_set_default.snap  inara__migration__tests__snapshot_alter_column_set_not_null.snap  inara__migration__tests__snapshot_alter_column_type.snap  inara__migration__tests__snapshot_complex_migration.snap  inara__migration__tests__snapshot_create_table.snap  inara__migration__tests__snapshot_drop_column.snap  (+5 more)
src/schema/: diff.rs  introspect.rs  mod.rs  parse.rs  relations.rs  render.rs  type_map.rs  types.rs
src/tui/: app.rs  edit.rs  fuzzy.rs  goto.rs  help.rs  hud.rs  input.rs  mod.rs  view.rs
tests/: hud.rs  introspect.rs  warnings.rs  workflow.rs
tests/fixtures/: setup.sql  teardown.sql
(+6 files in other folders)
