[package]
name = "inara"
version = "0.1.0"
edition = "2021"
description = "A terminal-native schema explorer and migration generator for sqlx + Postgres"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
crossterm = "0.28"
dirs = "6.0.0"
dotenvy = "0.15"
itertools = "0.14"
nucleo = "0.5.0"
nucleo-matcher = "0.3.1"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1.0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winnow = "0.7.14"

[dev-dependencies]
insta = "1"
proptest = "1"
